--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@hookform/resolvers": "^1.3.2",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^4.0.0-alpha.8",
     "connected-react-router": "6.5.2",
+    "date-fns": "^2.14.0",
     "history": "4.10.1",
     "lodash": "^4.17.20",
     "merge": "1.2.1",
