--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -8,10 +8,14 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/pickers": "^4.0.0-alpha.12",
+    "@material-ui/pickers": "^4.0.0-alpha.8",
+    "axios": "^0.21.1",
     "connected-react-router": "6.5.2",
+    "crypto-js": "^4.0.0",
     "date-fns": "^2.14.0",
     "history": "4.10.1",
+    "html-react-parser": "^1.2.4",
+    "linqts": "^1.14.4",
     "lodash": "^4.17.20",
     "merge": "1.2.1",
     "moment": "^2.29.1",
@@ -26,10 +30,13 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.1",
     "react-select": "^3.2.0",
+    "reactstrap": "^8.9.0",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
     "svgo": "1.3.0",
+    "sweetalert2": "^10.14.0",
     "yup": "^0.32.8"
   },
   "devDependencies": {
@@ -42,7 +49,7 @@
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "5.1.0",
     "@types/reactstrap": "8.0.6",
-    "@typescript-eslint/parser": "^2.5.0",
+    "@typescript-eslint/parser": "^4.14.2",
     "cross-env": "6.0.3",
     "eslint": "^6.5.1",
     "eslint-plugin-flowtype": "^3.13.0",
@@ -50,7 +57,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
     "nan": "^2.14.1",
-    "typescript": "^3.6.4"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
